# Hybrid-Quantum-tsp

./: .gitignore  Q1.py  QAOA_TSP_Project_Report.docx  README.md  pyproject.toml  requirements.txt
benchmarks/: config.yaml  plot_results.py  run_benchmark.py
notebooks/: 01_introduction.ipynb  02_qubo_encoding.ipynb  03_qaoa_circuit.ipynb  04_benchmark_results.ipynb
src/qaoa_tsp_benchmark/: __init__.py  metrics.py  problem_generator.py  types.py  utils.py
src/qaoa_tsp_benchmark/classical/: __init__.py  brute_force.py  or_tools_solver.py  simulated_annealing.py
src/qaoa_tsp_benchmark/quantum/: __init__.py  dwave_solver.py  hybrid_optimizer.py  qaoa_circuit.py  qubo_encoder.py
src/qaoa_tsp_benchmark/vrp/: __init__.py  vrp_benchmark.py  vrp_encoder.py
tests/: test_hybrid_solver.py  test_qaoa_circuit.py  test_qubo_encoder.py  test_sa_solver.py
